# ali-oss-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: rust.yml
examples/: example1.rs
src/: acl.rs  acl_common.rs  bucket.rs  bucket_common.rs  cname.rs  cname_common.rs  common.rs  error.rs  lib.rs  multipart.rs  multipart_common.rs  object.rs  object_common.rs  object_ext.rs  object_ext_common.rs  oss.rs  presign.rs  presign_common.rs  request.rs  symlink.rs  symlink_common.rs  tagging.rs  tagging_common.rs  util.rs
src/blocking/: acl.rs  bucket.rs  cname.rs  mod.rs  multipart.rs  object.rs  object_ext.rs  presign.rs  symlink.rs  tagging.rs
