[package]
name = "ali-oss-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
chrono = "0.4.39"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.25"
quick-xml = { version = "0.37.2"}
reqwest = "0.12.12"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"

[dev-dependencies]
dotenvy = "0.15.7"
simple_logger = "5.0.0"

[features]
default=["async"]
async=[]
blocking = ["reqwest/blocking"]
rust-tls = ["reqwest/rustls-tls"]
