[package]
name = "ali-oss-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1.86"
base64 = "0.22.1"
bytes = "^1"
chrono = "0.4.39"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.25"
mime_guess = "2.0.5"
quick-xml = { version = "0.37.2"}
regex = "1.11.1"
reqwest = {version = "0.12.12", features = ["stream"]}
serde = { version = "1.0.217", features = ["derive"], optional = true }
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"

[dev-dependencies]
dotenvy = "0.15.7"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
simple_logger = "5.0.0"

[features]
# Default features, using async request to call Aliyun OSS API
default=["async"]
async=[]

# Support synchronous request to call Aliyun OSS API
blocking = ["reqwest/blocking"]

# Enable `rustls-tls` feature on `reqwest` crate
rust-tls = ["reqwest/rustls-tls"]

# Enable serialization/deserialization on data types. Usful if you are using this crate for backend API
serde = ["dep:serde"]

# Using camelCase for serialization/deserialization. default is `snake_case`
serde_camelcase = ["serde"]
