[package]
name = "ali-oss-rs"
version = "0.1.2"
edition = "2021"
license = "MIT"
rust-version = "1.80.1"
description = "Aliyun OSS SDK for Rust。阿里云对象存储 Rust SDK"
authors = ["Yuan YQ <yuqiang.yuan@163.com>"]
repository = "https://github.com/yuqiang-yuan/ali-oss-rs"
documentation = "https://docs.rs/ali-oss-rs"
keywords = ["aliyun", "oss", "ali"]
categories = ["api-bindings", "web-programming"]

[dependencies]
async-trait = "0.1.86"
base64 = "0.22.1"
bytes = "^1"
chrono = "0.4.39"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.25"
md5 = "0.7.0"
mime_guess = "2.0.5"
quick-xml = { version = "0.37.2"}
regex = "1.11.1"
reqwest = {version = "0.12.12", features = ["stream"]}
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
url = "2.5.4"
urlencoding = "2.1.3"

[dev-dependencies]
dotenvy = "0.15.7"
serde_yaml = "0.9.34"
simple_logger = "5.0.0"
uuid = { version = "1.4.1", features = ["v4"] }

[features]
# Default features, using async request to call Aliyun OSS API
default=["async"]
async=[]

# Support synchronous request to call Aliyun OSS API
blocking = ["reqwest/blocking"]

# Enable `rustls-tls` feature on `reqwest` crate
rust-tls = ["reqwest/rustls-tls"]

# Enable serialization/deserialization on data types. Usful if you are using this crate for backend API
serde-support = []

# Using camelCase for serialization/deserialization. default is `snake_case`
serde-camelcase = ["serde-support"]
